...

            LazyVerticalGrid(
                columns = GridCells.Adaptive(160.dp),
                contentPadding = PaddingValues(16.dp),
                horizontalArrangement = Arrangement.spacedBy(16.dp),
                verticalArrangement = Arrangement.spacedBy(16.dp),
                modifier = modifier.testTag("SayurList")
            ) {
                items(orderSayur) { Id ->
                    if (Id.sayur.title.contains(searchText, ignoreCase = true) ||
                        Id.sayur.description.contains(searchText, ignoreCase = true)
                    ) {
                        SayurItem(
...
